# resumait-airflow

./: README.md  pyproject.toml
dags/: cleanup_metadata.py  execute_crawling.py  linkareer_cover_letter_dag.py  logger.py  preprocess.py  scraper.py  test.py  utils.py
dags/VectorDB/: index.faiss  index.pkl
dags/data/: Linkareer_Cover_Letter_Data.csv
data/: Linkareer_Cover_Letter_Data.csv
