[tool.poetry]
name = "resumait-airflow"
version = "0.1.0"
description = ""
authors = ["freemjstudio <mjwoo0@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
langchain = "0.2.1"
apache-airflow = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
